--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "@types/react": "^16.0",
     "@types/react-dom": "^16.0",
     "axios": "^0.18",
+    "es6-promise": "^4.2.8",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-notifications": "^1.4.3",
-    "react-scripts-ts": "^2.17.0",
+    "react-scripts-ts": "^4.0.8",
     "typescript": "^3.5.2"
   },
   "devDependencies": {
-    "@types/axios": "^0.14",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.0.2"
   },
@@ -26,5 +26,8 @@
     "eject": "react-scripts-ts eject",
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive"
-  }
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
